<resources>
    <string name="app_name">wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="create_wallet_des">Create a new wallet</string>
    <string name="wallet_name_des">Give your wallet an awesome name</string>
    <string name="wallet_passwd_des">Set a password</string>
    <string name="passwd_confirm">Confirm Password</string>
    <string name="passwd_empty">Please enter the password</string>
    <string name="wallet_empty">Please enter the wallet name</string>

    <string name="passwd_weak">Password is weak</string>
    <string name="passwd_secondary">Password is secondary</string>
    <string name="passwd_strong">Password is strong</string>

    <string name="app_desc">Secure token trading right from your own wallet</string>

    <string name="wallet_passwd_confirm_des">Set password again</string>
    <string name="wallet_passwd_confirm_warn">Please input the consistant password</string>

    <string name="wallet_congrate">Congratulations</string>
    <string name="wallet_congrate_des">Your wallet has been generated.Please take a moment to backup your wallet by writing down the mnemonic words on paper.Mnemonic words are required to restore your wallets.Please do not share your mnemonic words with anyone,nor save them on cloud storage.</string>
    <string name="wallet_backup">Backup Now</string>
    <string name="wallet_backup_title">Please write down</string>
    <string name="wallet_backup_des">Please make sure you have recorded all the words safely.Otherwise,you will not be able to go through the verification process,and have to start over.</string>
    <string name="wallet_backup_move_next">Next 12 words</string>
    <string name="wallet_backup_move_previous">Previous 12 words</string>
    <string name="wallet_verify">Verify Now</string>
    <string name="wallet_verify_dialog_msg">Please make sure you have backed up mnemonic</string>
    <string name="wallet_verify_dialog_cancel">Cancel</string>
    <string name="wallet_verify_dialog_confirm">Confirm</string>

    <string name="wallet_import_title">Import Wallet</string>
    <string name="wallet_import_tab_mnemonic">Mnemonic</string>
    <string name="wallet_import_tab_keystore">Keystore</string>
    <string name="wallet_import_tab_private">Private Key</string>

    <string name="wallet_import_hint_mnemonic">Please use space to seperate the mnemonic words</string>
    <string name="wallet_import_hint_keystore">Please pase keystore content into this field,or with the help of QR code</string>
    <string name="wallet_import_hint_private">Please input your private key</string>

    <string name="wallet_import_action_next">Next</string>

    <string name="wallet_import_passwd_des">Keystore password</string>

    <string name="wallet_import_keystore">Please input your keystore</string>
    <string name="wallet_import_pwd">Please input your password</string>
    <string name="wallet_import_mnemonic">Please input your mnemonic</string>
    <string name="wallet_import_private">Please input your private key</string>

    <string name="wallet_mn_verify_title">Verification</string>
    <string name="wallet_mn_verify_tip">Please click the mnemonic in order</string>

    <string name="wallet_mn_verify_success">Mnemonic verify success</string>
    <string name="wallet_mn_verify_fail">Mnemonic verify failed</string>
    <string name="wallet_mn_verify_btn">Verify</string>





</resources>
