<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_24">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wallet_loopr"
        android:layout_marginTop="@dimen/dp_38"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/app_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/create_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/wallet_rectangle_black_bg"
            android:padding="12dp"
            android:textSize="@dimen/sp_16"
            android:text="@string/generate_wallet"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/wallet_rectangle_white_bg"
            android:padding="12dp"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/import_wallet"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>
