<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_24">

    <LinearLayout
        android:id="@+id/import_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:orientation="vertical">

        <EditText
            android:id="@+id/wallet_import_keystore_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wallet_import_bg"
            android:gravity="top"
            android:hint="@string/wallet_import_hint_keystore"
            android:textColorHint="@color/wallet_create_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:padding="@dimen/dp_12" />

        <EditText
            android:id="@+id/wallet_import_keystore_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:hint="@string/wallet_import_passwd_des"
            android:textColorHint="@color/wallet_create_text"
            android:singleLine="true"
            android:background="@null"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black" />
        <View
            android:id="@+id/wallet_import_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wallet_edittext_line"
            android:layout_below="@+id/wallet_confirm"
            android:layout_marginTop="@dimen/wallet_edittext_margin_top"
            android:background="@color/wallet_import_pwd_color"/>

        <TextView
            android:id="@+id/import_wallet_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wallet_import_keystore_btn_top"
            android:background="@drawable/wallet_rectangle_black_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/import_wallet"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</ScrollView>